adds show for Bill Murray

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
       border-radius: 8px;
     }
     p.card-text {
-      
     }
   </style>
   <body>
@@ -61,7 +60,7 @@
           />
           <div class="card-body">
             <h5 class="card-title">Bill Murray</h5>
-            <p class="card-text">Known for: Quick Change, Groundhog's Day, Lost in Translation</p>
+            <p class="card-text">Known for: Quick Change, Groundhog's Day, The Life Aquatic</p>
           </div>
           <div class="card-footer">
             <a class="btn btn-danger" href="#" role="button" title="Click!">More Info</a>
