--- a/public/show.html
+++ b/public/show.html
@@ -7,59 +7,124 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title></title>
+    <title>Bill Murray</title>
   </head>
+  <style>
+    body {
+      background-color: rgb(108, 187, 193);
+      border: 4px navy;
+      border-style: ;
+      border-width: thin;
+      padding-top: 10px;
+      padding-bottom: 20px;
+      padding-left: 220px;
+      padding-right: 15px;
+      text-align: center;
+      font-style: normal;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    h2 {
+      font-size: 55px;
+    }
+
+    p1 {
+      font-size: 25px;
+    }
+
+    /* unvisited link */
+    a:link {
+      color: white;
+    }
+
+    /* visited link */
+    a:visited {
+      color: red;
+    }
+
+    /* mouse over link */
+    a:hover {
+      color: hotpink;
+    }
+
+    /* selected link */
+    a:active {
+      color: blue;
+    }
+  </style>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Actors</a>
+    <nav class="navbar navbar-expand-med navbar-muted bg-info">
+      <a class="navbar-brand" align="middle" href="/api/movies/index.html" title="index">Actors</a>
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
         data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
+        aria-expanded="true"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <!--       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">
             Home
-            <span class="sr-only">(current)</span>
-          </a>
-          <a class="nav-item nav-link" href="#">Add Actor</a>
-        </div>
-      </div>
+            <span class="sr-only">(current)</span> -->
+      <!-- </a> -->
+      <!--   </div>
+      </div> -->
     </nav>
+    <br />
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">
-            Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </div>
-      </div>
-    </nav>
-
-    <h2>Tom Hardy</h2>
-    <h4>Known for: Inception, The Dark Knight Rises</h4>
+    <br />
+    <img src="http://onthesetofnewyork.com/locations/quickchange/quickchange02.jpg" alt="Quick Change" />
+    <br />
+    <h2>Bill Murray</h2>
+    <br />
+    <p1>
+      William James Murray was born in Wilmette, Illinois, on the 21st of September in 1950. He was one of eight
+      children.
+      <br />
+      <br />
+      Bill Murray began his acting career on the National Lampoon Radio Hour in 1975 with comedians
+      <a href="https://en.wikipedia.org/wiki/John_Belushi" title="Learn more">John Belushi</a>
+      &
+      <a href="https://en.wikipedia.org/wiki/Dan_Aykroyd" title="Learn more">Dan Aykroyd</a>
+      . From 1977 to 1980 Murray performed in
+      <a href="https://twitter.com/nbcsnl" title="tweet away">Saturday Night Live</a>
+      , a comedy sketch show on
+      <a href="https://www.nbc.com" title="NBC">NBC</a>
+      , where he popularized a seedy, shifty comedic persona. He launched his film career with a string of commercial
+      hits, including
+      <i>Meatballs</i>
+      (1979),
+      <i>Caddyshack</i>
+      (1980), and
+      <i>Stripes</i>
+      (1981). In 1984 Murray starred with Aykroyd and
+      <a href="https://www.imdb.com/name/nm0000601/" title="Learn more">Harold Ramis</a>
+      in Ghostbusters, which became one of the highest-grossing films of the decade.
+      <br />
+      <br />
+      A run of unsuccessful films led Murray into a self-imposed hiatus until he directed and starred in
+      <i>Quick Change</i>
+      (1990). After playing a burnt out weatherman in the existential comedy
+      <i>Groundhog Day</i>
+      (1993), Murray began tackling more dramatic and challenging parts, including supporting roles in
+      <i>Ed Wood</i>
+      (directed by Tim Burton, 1994) and
+      <i>Rushmore</i>
+      (directed by Wes Anderson, 1998).
+    </p1>
     <br />
     <br />
+    <br />
+    <div class="staypuft">
+      <img
+        src="https://vignette.wikia.nocookie.net/ghostbusters/images/6/68/StayPuftbio.png/revision/latest/scale-to-width-down/350?cb=20120119211758"
+        alt="mallow man"
+      />
+    </div>
   </body>
 </html>
