--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,49 @@
     <title>Actors Index</title>
   </head>
   <style>
+    body {
+      background-color: rgb(108, 187, 193);
+      border: 4px navy;
+      border-style: ;
+      border-width: thin;
+      padding-top: 10px;
+      padding-bottom: 20px;
+      padding-left: 220px;
+      padding-right: 15px;
+      text-align: center;
+      font-style: normal;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    h2 {
+      font-size: 55px;
+    }
+
+    p1 {
+      font-size: 25px;
+    }
+
+    /* unvisited link */
+    a:link {
+      color: white;
+    }
+
+    /* visited link */
+    a:visited {
+      color: #dccfcf;
+    }
+
+    /* mouse over link */
+    a:hover {
+      color: hotpink;
+    }
+
     img {
       border-radius: 8px;
     }
+
     p.card-text {
+      font-size: 20px;
     }
   </style>
   <body>
@@ -59,11 +98,11 @@
             title="Bill"
           />
           <div class="card-body">
-            <h5 class="card-title">Bill Murray</h5>
+            <h6 class="card-title">Bill Murray</h6>
             <p class="card-text">Known for: Quick Change, Groundhog's Day, The Life Aquatic</p>
           </div>
           <div class="card-footer">
-            <a class="btn btn-danger" href="#" role="button" title="Click!">More Info</a>
+            <a class="btn btn-primary" href="#" role="button" title="Click!">More Info</a>
           </div>
         </div>
         <div class="card">
@@ -74,12 +113,12 @@
             title="Scar"
           />
           <div class="card-body">
-            <h5 class="card-title">Scarlett Johansson</h5>
+            <h6 class="card-title">Scarlett Johansson</h6>
             <p class="card-text">Known for: Ghost World, Avengers, Lost in Translation</p>
           </div>
           <div class="card-footer">
             <small class="text-muted">
-              <a class="btn btn-info" href="#" role="button" title="Click!">More Info</a>
+              <a class="btn btn-primary" href="#" role="button" title="Click!">More Info</a>
             </small>
           </div>
         </div>
@@ -91,12 +130,12 @@
             title="Ben"
           />
           <div class="card-body">
-            <h5 class="card-title">Benedict Cumberbatch</h5>
+            <h6 class="card-title">Benedict Cumberbatch</h6>
             <p class="card-text">Known for: Avengers, Sherlock, Black Mass</p>
           </div>
           <div class="card-footer">
             <small class="text-muted">
-              <a class="btn btn-secondary" href="#" role="button" title="Click!">More Info</a>
+              <a class="btn btn-primary" href="#" role="button" title="Click!">More Info</a>
             </small>
           </div>
         </div>
