--- a/public/new.html
+++ b/public/new.html
@@ -85,8 +85,8 @@
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity" />
+          <label for="inputFavColor">Favorite Color</label>
+          <input type="text" class="form-control" id="inputCity" placeholder="Orange" />
         </div>
 
         <div class="form-group col-md-6">
