--- a/public/movies-index.html
+++ b/public/movies-index.html
@@ -4,21 +4,26 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="movie-index.js" defer></script>
-    <meta charset="UTF-8" />
+
     <title>Movies</title>
   </head>
+  <style>
+    h2 {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  </style>
   <body>
     <center>
-      <h2 style="font-family:courier;">The Life Aquatic</h2>
+      <h2>The Life Aquatic</h2>
       <br />
       <br />
-      <h2 style="font-family:courier;">Doctor Strange</h2>
+      <h2>Doctor Strange</h2>
       <br />
       <br />
-      <h2 style="font-family:courier;">Avengers</h2>
+      <h2>Avengers</h2>
       <br />
       <br />
-      <h2 style="font-family:courier;">Ghost World</h2>
+      <h2>Ghost World</h2>
     </center>
   </body>
 </html>
